Customised h1 order on person page + fixed z-index issue with overlapping header

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -352,6 +352,8 @@ main,
 .block {
   margin: 16px auto;
   max-width: 900px;
+  position: relative;
+  z-index: 1;
 }
 
 .notehead {
